--- a/app/view/index.html
+++ b/app/view/index.html
@@ -13,6 +13,11 @@
 
 <body>
     <div class="container pt-3">
+        {% if error %}
+            <div class="alert alert-danger" role="alert">
+                {{ error }}
+            </div>
+        {% endif %}
         <div class="row justify-content-center">
         <form class="form-signin" action="/controllers/login.php" method="POST">
             <div class="form-group">
