--- a/app/view/index.html
+++ b/app/view/index.html
@@ -19,10 +19,10 @@
             </div>
         {% endif %}
         <div class="row justify-content-center">
-        <form class="form-signin" action="/controllers/login.php" method="POST">
+        <form class="form-signin" action="http://localhost/Gerenciador-de-Projetos/auth" method="POST">
             <div class="form-group">
-                <label for="exampleInputEmail1">Email</label>
-                <input type="email" class="form-control" id="exampleInputEmail1" aria-describedby="emailHelp" required="" name="email" autofocus="">
+                <label for="userEmail">Email</label>
+                <input type="email" class="form-control" id="userEmail" aria-describedby="emailHelp" required="" name="email" autofocus="">
                 <small id="emailHelp" class="form-text text-muted">Nós nunca iremos compartilhar seu email com ninguém.</small>
             </div>
             <div class="form-group">
