--- a/app/view/tasks.html
+++ b/app/view/tasks.html
@@ -16,6 +16,7 @@
     <div class="container">
         <div class="row justify-content-center">
             <div class="col-12">
+                <div></div>
                 <div class="card  ">
                     <div class="card-header">Lista de Tarefas - {{ userData.email }} 
                         <a class="float-right btn btn-primary" href="../addTask/{{userData.id}}">Adicionar Tarefa</a>
